--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,14 @@
 {
 	"name": "93devs/nine3-instagram-api",
 	"license": "MIT",
+	"version": "master",
 	"minimum-stability": "dev",
 	"autoload": {
-			"classmap": ["class-nine3-instagram.php"],
-			"exclude-from-classmap": ["phpcs.xml"]
+		"classmap": [
+			"class-nine3-instagram.php"
+		],
+		"exclude-from-classmap": [
+			"phpcs.xml"
+		]
 	}
 }
